# Student_Helper

./: .coverage  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  TESTING.md  cors.json  docker-compose.yml  main.ipynb  nano_trial.py  pyproject.toml  pytest.ini  requirements-backup.txt  requirements.txt  start.ps1  test_db_connection.py  test_session_db.py
.claude/: settings.local.json
.faiss_index/: index.faiss  index.pkl
IAC/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.studdy-buddy.yaml  Pulumi.yaml  README.md  __init__.py  __main__.py  architecture_diagram.py
IAC/components/: __init__.py
IAC/configs/: __init__.py  base.py  constants.py  environment.py
IAC/diagrams/: IAC_COMPREHENSIVE_GUIDE.md
IAC/utils/: __init__.py  naming.py  outputs.py  tags.py
backend/: .dockerignore  Dockerfile  README.md  dependencies.py  deploy-ecr.ps1  ec2-setup.sh  main.py  requirements.txt
backend/api/: README.md  __init__.py  diagrams.py  jobs.py  main.py  sessions.py
backend/application/: README.md  __init__.py  chat_history_adapter.py  chunker.py  diagram_service.py  document_service.py  session_service.py
backend/boundary/: README.md  __init__.py
backend/configs/: README.md  __init__.py  base.py  celery_config.py  database.py  observability.py  s3_documents.py  settings.py  vector_store.py
backend/core/: README.md  __init__.py  citation_builder.py  document_processor.py  exceptions.py  retriever.py
backend/evaluation/: README.md  __init__.py
backend/models/: README.md  __init__.py  chat.py  chunk.py  citation.py  common.py  course.py  diagram.py  document.py  job.py  session.py  streaming.py  visual_knowledge.py
backend/observability/: README.md  __init__.py  correlation.py  langfuse_tracer.py  log_utils.py  logger.py  middleware.py
backend/scripts/: README.md  build-lambda-image.ps1  deploy-backend.ps1  deploy-frontend.ps1  ec2-setup.sh  ecr_builder.py  entrypoint.sh  start.ps1  test_s3_vectors.py
backend/workers/: __init__.py
documentation/: PRD.md  PROJECT_SNAPSHOT_MVP_ROADMAP.md  README.md
documentation/07_lambda_deployment_refactor/: README.md
documentation/course_integration_plan/: README.md
documentation/infra/: cloud-architecture.md  flow.md  service.md
documentation/service_level/: api-specification.md  lambda-architecture.md  sqs-architecture.md
tests/: __init__.py  conftest.py  test_dependencies.py
tests/api/: test_chat_endpoint.py  test_courses_refactored.py  test_documents_refactored.py  test_health.py  test_jobs.py  test_sessions_refactored.py  test_visual_knowledge.py
tests/application/: test_chat_service.py  test_document_service.py
(+200 files in other folders)
