[project]
name = "legal-search"
version = "0.1.0"
description = "Student-focused RAG application with session-based Q&A, async document ingestion, and Mermaid diagram generation"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # FastAPI Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Pydantic
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "langchain-community>=0.3.10",
    "langchain-google-genai>=2.0.8",
    "langchain-aws>=0.2.10",
    # Document Processing
    "docling>=2.15.2",
    # Vector Store & AWS
    "boto3>=1.35.81",
    "faiss-cpu>=1.9.0",
    # Observability & Evaluation
    "langfuse>=2.56.2",
    "ragas>=0.2.11",
    # Utilities
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.4.0",
    "langchain>=1.1.3",
    "langgraph>=1.0.5",
    "langchain-docling>=2.0.0",
    "pulumi-aws-native>=1.40.0",
    "pulumi-aws>=7.14.0",
    "langchain-postgres>=0.0.16",
    "psycopg[binary]>=3.3.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
